--- a/sticky_notes/index.html
+++ b/sticky_notes/index.html
@@ -7,6 +7,12 @@
     <title>Sticky notes creator</title>
 </head>
 <body>
-    
+    <input type="text" class="note color" placeholder="Note color...">
+    <input type="text" class="note text" placeholder="Note text...">
+    <button>Create</button>
+
+    <div id="content"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
