--- a/basic_algorithm_scripting/index.html
+++ b/basic_algorithm_scripting/index.html
@@ -9,5 +9,6 @@
 <body>
     <div id="main"></div>
     <script src="./factorial.js"></script>
+    <script src="./longestWord.js"></script>
 </body>
 </html>
