--- a/basic_algorithm_scripting/index.html
+++ b/basic_algorithm_scripting/index.html
@@ -10,5 +10,6 @@
     <div id="main"></div>
     <script src="./factorial.js"></script>
     <script src="./longestWord.js"></script>
+    <script src="./largestOfFour.js"></script>
 </body>
 </html>
